--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -1,9 +1,22 @@
 // colors
-$color-red: red;
-$color-black: black;
-$color-white: white;
 
-$bg-color-body: $color-white;
+
+$bg-cookies-color: #194277;
+$main-text-color: #5A5A5A;
+$main-title-color: #3677FD;
+$button-text-color: #3695FF;
+$white-color: #FFFFFF;
+$expert-bg-color: #F1F8FF;
+$works-bg-color: #F4F4F4;$symu-text-color: #B9BCD1;
+$symu-button-bg: #EB304D;
+$menu-item-color: #D2D2D2;
+$input-color: #5A5A5A;
+
+
+
+
+
+$bg-color-body: $white-color;
 
 // fonts
 $default-font-name: 'Lato';
